seconde version now its working
we still need to add more security layers

--- a/pages/upload.html
+++ b/pages/upload.html
@@ -2,8 +2,8 @@
 <head></head>
 <body>
 <form action="../engine/upload.php" method="post" enctype="multipart/form-data">
-  <input type="file" name="file" />
-  <input type="submit" value="envoyer" />
+  <input type="file" name="fileto"  accept="image/*,video/*,application/msword,application/pdf,application/msexcel"/>
+  <input type="submit" value="envoyer" name="submit" />
 </form>
 </body>
 </html>
