moved the javascript function to the js folder

--- a/pages/upload.html
+++ b/pages/upload.html
@@ -1,20 +1,6 @@
 <html>
 <head>
-<script type="text/javascript" >
-function checkLinkInput(){
-  var g = document.getElementById("link");
-  var h = document.getElementById("linkLabel");
-if (g.type == "hidden") {
-g.type = "text";
-  h.style.visibility = "visible";
-}else {
-  g.type = "hidden";
-  h.style.visibility = "hidden";
-}
-
-  }
-
-</script>
+<script type="text/javascript" src="../js/checkBoxFunction.js" ></script>
 </head>
 <body >
 <form action="../engine/upload.php" method="post" enctype="multipart/form-data">
