--- a/admin/index.html
+++ b/admin/index.html
@@ -41,19 +41,19 @@
                 <div class="login-form">
                     <form>
                         <div class="form-group">
-                            <label>Email address</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <label>Votre adress email</label>
+                            <input type="email" class="form-control" placeholder="votre adress email">
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <label>Mot de pass</label>
+                            <input type="password" class="form-control" placeholder="votre mot de passe">
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"> Remember Me
+                                <input type="checkbox"> Se souvenir de moi
                             </label>
                             <label class="pull-right">
-                                <a href="#">Forgotten Password?</a>
+                                <a href="#">Mot de pass oublier?</a>
                             </label>
 
                         </div>
