--- a/New Text Document.html
+++ b/New Text Document.html
@@ -128,3 +128,41 @@
     </div><!-- portfolioContainer -->
       </div><!-- container -->
   </section><!-- portfolio-section -->
+
+
+
+
+
+
+
+
+
+
+<div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header" onclick="loadDoc()">
+                            <strong class="card-title">Data Table</strong>
+                        </div>
+                        <div class="card-body">
+                  <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Position</th>
+                        <th>Office</th>
+                        <th>action</th>
+                      </tr>
+                    </thead>
+                    <tbody id="gogo">
+
+                      <tr>
+                        <td id="target">Donna Snider</td>
+                        <td>Customer Support</td>
+                        <td>New York</td>
+                        <td> <div class="btn btn-success btn-app-sm"> </div> <div class="btn btn-success btn-app-sm"> </div> <div class="btn btn-success btn-app-sm"> </div></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                        </div>
+                    </div>
+                </div>
