table sans onclick

--- a/New Text Document.html
+++ b/New Text Document.html
@@ -140,7 +140,7 @@
 
 <div class="col-md-12">
                     <div class="card">
-                        <div class="card-header" onclick="loadDoc()">
+                        <div class="card-header">
                             <strong class="card-title">Data Table</strong>
                         </div>
                         <div class="card-body">
