--- a/New Text Document.html
+++ b/New Text Document.html
@@ -166,3 +166,56 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+<section class="resume-section portfolio-area section-gap" id="education">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+      <div class="menu-content col-lg-10">
+                <div class="title text-center">
+                  <h1 class="mb-10">This is what we can do for you</h1>
+                  <p>Who are in extremely love with eco friendly system..</p>
+                </div>
+              </div>
+
+      </div><!-- row -->
+
+<div class="col-md-12 branding">
+                    <div class="card">
+                        <div class="card-header">
+                            <strong class="card-title">Data Table</strong>
+                        </div>
+                        <div class="card-body">
+                  <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Position</th>
+                        <th>Office</th>
+                        <th>action</th>
+                      </tr>
+                    </thead>
+                    <tbody id="gogo">
+
+                      <tr>
+                        <td id="target">Donna Snider</td>
+                        <td>Customer Support</td>
+                        <td>New York</td>
+                        <td> <div class="btn btn-success btn-app-sm"> </div> <div class="btn btn-success btn-app-sm"> </div> <div class="btn btn-success btn-app-sm"> </div></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                        </div>
+                    </div>
+                </div>
+  
+
+
+
+    </div><!-- portfolioContainer -->
+      </div><!-- container -->
+  </section><!-- portfolio-section -->
