--- a/ElaAdmin-master/uc-toastr.html
+++ b/ElaAdmin-master/uc-toastr.html
@@ -555,14 +555,14 @@
     </div>
     <!-- End Wrapper -->
     <!-- All Jquery -->
-    <script src="js/lib/jquery/jquery.min.js"></script>
-    <!-- Bootstrap tether Core JavaScript -->
+   <script src="js/lib/jquery/jquery.min.js"></script>
+     <!-- Bootstrap tether Core JavaScript -->
     <script src="js/lib/bootstrap/js/popper.min.js"></script>
     <script src="js/lib/bootstrap/js/bootstrap.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="js/jquery.slimscroll.js"></script>
+    <!-- <script src="js/jquery.slimscroll.js"></script> -->
     <!--Menu sidebar -->
-    <script src="js/sidebarmenu.js"></script>
+    <!-- <script src="js/sidebarmenu.js"></script> -->
     <!--stickey kit -->
     <script src="js/lib/sticky-kit-master/dist/sticky-kit.min.js"></script>
 
